# RL-Trading

./: .gitignore  README.md  main.py  pyproject.toml  test_earliest_data.py
config/: default.yaml
data/: .gitkeep
src/: __init__.py
src/agents/: __init__.py  closing_agent.py  opening_agent.py  signal_confirmation.py
src/backtesting/: __init__.py
src/data/: __init__.py  data_downloader.py  data_processor.py  download_script.py  process_script.py
src/environment/: __init__.py  position_manager.py  reward_function.py  trading_env.py
src/models/: __init__.py  actor_critic.py  actor_network.py  critic_network.py  data_models.py
src/persistence/: __init__.py
src/training/: __init__.py  replay_buffer.py
tests/: __init__.py
tests/property/: test_signal_confirmation.py
tests/unit/: test_data_downloader.py  test_download_script.py
